add rongyun sdk

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "u-im",
   "version": "0.1.0",
-  "description": "基于 uniapp 的融云即使聊天 Demo 用例",
+  "description": "基于 uniapp 的融云即时聊天 Demo 用例",
   "main": "main.js",
   "repository": {
     "type": "git",
