--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,24 @@
 {
-    "name" : "u-im",
-    "appid" : "__UNI__59BDBC9",
-    "description" : "基于 uniapp 的融云即时聊天 Demo 用例",
-    "versionName" : "0.1.0",
-    "versionCode" : 1,
-    "transformPx" : false,
-    /* 5+App特有相关 */
-    "app-plus" : {
-        "usingComponents" : true,
-        "nvueStyleCompiler" : "uni-app",
-        "compilerVersion" : 3,
-        "splashscreen" : {
-            "alwaysShowBeforeRender" : true,
-            "waiting" : true,
-            "autoclose" : true,
-            "delay" : 0
+    "name": "@wingscloud/template-talks",
+    "appid": "__UNI__59BDBC9",
+    "description": "【前端模板】即时通讯跨端 App，基于 Uniapp + uView UI 开发。模板基于成熟的产品设计及 UI 设计，同时提供聊天窗口、通讯录、朋友圈、个人中心等 8 张全流程页面模板。全模块化开发，支持灵活分包及组件搭配组装。",
+    "versionName": "0.1.0",
+    "versionCode": 1,
+    "transformPx": false,
+    "app-plus": {
+        "usingComponents": true,
+        "nvueStyleCompiler": "uni-app",
+        "compilerVersion": 3,
+        "splashscreen": {
+            "alwaysShowBeforeRender": true,
+            "waiting": true,
+            "autoclose": true,
+            "delay": 0
         },
-        /* 模块配置 */
-        "modules" : {},
-        /* 应用发布信息 */
-        "distribute" : {
-            /* android打包配置 */
-            "android" : {
-                "permissions" : [
+        "modules": {},
+        "distribute": {
+            "android": {
+                "permissions": [
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
@@ -39,93 +35,89 @@
                     "<uses-feature android:name=\"android.hardware.camera\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ],
-                "minSdkVersion" : 21,
-                "targetSdkVersion" : 26
+                "minSdkVersion": 21,
+                "targetSdkVersion": 26
             },
-            /* ios打包配置 */
-            "ios" : {
-                "dSYMs" : false
+            "ios": {
+                "dSYMs": false
             },
-            /* SDK配置 */
-            "sdkConfigs" : {
-                "ad" : {}
+            "sdkConfigs": {
+                "ad": {}
             },
-            "icons" : {
-                "android" : {
-                    "hdpi" : "unpackage/res/icons/72x72.png",
-                    "xhdpi" : "unpackage/res/icons/96x96.png",
-                    "xxhdpi" : "unpackage/res/icons/144x144.png",
-                    "xxxhdpi" : "unpackage/res/icons/192x192.png"
+            "icons": {
+                "android": {
+                    "hdpi": "unpackage/res/icons/72x72.png",
+                    "xhdpi": "unpackage/res/icons/96x96.png",
+                    "xxhdpi": "unpackage/res/icons/144x144.png",
+                    "xxxhdpi": "unpackage/res/icons/192x192.png"
                 },
-                "ios" : {
-                    "appstore" : "unpackage/res/icons/1024x1024.png",
-                    "ipad" : {
-                        "app" : "unpackage/res/icons/76x76.png",
-                        "app@2x" : "unpackage/res/icons/152x152.png",
-                        "notification" : "unpackage/res/icons/20x20.png",
-                        "notification@2x" : "unpackage/res/icons/40x40.png",
-                        "proapp@2x" : "unpackage/res/icons/167x167.png",
-                        "settings" : "unpackage/res/icons/29x29.png",
-                        "settings@2x" : "unpackage/res/icons/58x58.png",
-                        "spotlight" : "unpackage/res/icons/40x40.png",
-                        "spotlight@2x" : "unpackage/res/icons/80x80.png"
+                "ios": {
+                    "appstore": "unpackage/res/icons/1024x1024.png",
+                    "ipad": {
+                        "app": "unpackage/res/icons/76x76.png",
+                        "app@2x": "unpackage/res/icons/152x152.png",
+                        "notification": "unpackage/res/icons/20x20.png",
+                        "notification@2x": "unpackage/res/icons/40x40.png",
+                        "proapp@2x": "unpackage/res/icons/167x167.png",
+                        "settings": "unpackage/res/icons/29x29.png",
+                        "settings@2x": "unpackage/res/icons/58x58.png",
+                        "spotlight": "unpackage/res/icons/40x40.png",
+                        "spotlight@2x": "unpackage/res/icons/80x80.png"
                     },
-                    "iphone" : {
-                        "app@2x" : "unpackage/res/icons/120x120.png",
-                        "app@3x" : "unpackage/res/icons/180x180.png",
-                        "notification@2x" : "unpackage/res/icons/40x40.png",
-                        "notification@3x" : "unpackage/res/icons/60x60.png",
-                        "settings@2x" : "unpackage/res/icons/58x58.png",
-                        "settings@3x" : "unpackage/res/icons/87x87.png",
-                        "spotlight@2x" : "unpackage/res/icons/80x80.png",
-                        "spotlight@3x" : "unpackage/res/icons/120x120.png"
+                    "iphone": {
+                        "app@2x": "unpackage/res/icons/120x120.png",
+                        "app@3x": "unpackage/res/icons/180x180.png",
+                        "notification@2x": "unpackage/res/icons/40x40.png",
+                        "notification@3x": "unpackage/res/icons/60x60.png",
+                        "settings@2x": "unpackage/res/icons/58x58.png",
+                        "settings@3x": "unpackage/res/icons/87x87.png",
+                        "spotlight@2x": "unpackage/res/icons/80x80.png",
+                        "spotlight@3x": "unpackage/res/icons/120x120.png"
                     }
                 }
             },
-            "splashscreen" : {
-                "androidStyle" : "common"
+            "splashscreen": {
+                "androidStyle": "common"
             }
         },
-        "nativePlugins" : {
-            "RongCloud-IM-V2" : {
-                "__plugin_info__" : {
-                    "name" : "RCUniIMV2",
-                    "description" : "融云即时通讯 SDK uni 原生插件V2",
-                    "platforms" : "Android,iOS",
-                    "url" : "https://ext.dcloud.net.cn/plugin?id=9227",
-                    "android_package_name" : "com.u.im",
-                    "ios_bundle_id" : "com.u.im",
-                    "isCloud" : true,
-                    "bought" : 1,
-                    "pid" : "9227",
-                    "parameters" : {}
+        "nativePlugins": {
+            "RongCloud-IM-V2": {
+                "__plugin_info__": {
+                    "name": "RCUniIMV2",
+                    "description": "融云即时通讯 SDK uni 原生插件V2",
+                    "platforms": "Android,iOS",
+                    "url": "https://ext.dcloud.net.cn/plugin?id=9227",
+                    "android_package_name": "com.u.im",
+                    "ios_bundle_id": "com.u.im",
+                    "isCloud": true,
+                    "bought": 1,
+                    "pid": "9227",
+                    "parameters": {}
                 }
             }
         }
     },
-    /* 快应用特有相关 */
-    "quickapp" : {},
-    /* 小程序特有相关 */
-    "mp-weixin" : {
-        "appid" : "",
-        "setting" : {
-            "urlCheck" : false
+    "quickapp": {},
+    "mp-weixin": {
+        "appid": "",
+        "setting": {
+            "urlCheck": false
         },
-        "usingComponents" : true
+        "usingComponents": true
     },
-    "mp-alipay" : {
-        "usingComponents" : true
+    "mp-alipay": {
+        "usingComponents": true
     },
-    "mp-baidu" : {
-        "usingComponents" : true
+    "mp-baidu": {
+        "usingComponents": true
     },
-    "mp-toutiao" : {
-        "usingComponents" : true
+    "mp-toutiao": {
+        "usingComponents": true
     },
-    "uniStatistics" : {
-        "enable" : false
+    "uniStatistics": {
+        "enable": false
     },
-    "vueVersion" : "2",
-    "locale" : "zh-Hans",
-    "fallbackLocale" : "zh-Hans"
+    "vueVersion": "2",
+    "locale": "zh-Hans",
+    "fallbackLocale": "zh-Hans"
 }
